--- a/init.hisiliconhi4511.rc
+++ b/init.hisiliconhi4511.rc
@@ -1,10 +1,9 @@
-on fs
-    mount_all /fstab.hisiliconhi4511
 
 on init
     # See storage config details at http://source.android.com/tech/storage/
     mkdir /mnt/shell/emulated 0700 shell shell
     mkdir /storage/emulated 0555 root root
+    mkdir /storage/emulated/legacy 0555 root root
 
     export EXTERNAL_STORAGE /storage/emulated/legacy
     export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
@@ -21,6 +20,10 @@ on init
 
 on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
+
+on fs
+	mkdir /factory 0775 radio radio
+	mount_all /fstab.hisiliconhi4511
 
 # virtual sdcard daemon running as media_rw (1023)
 service sdcard /system/bin/sdcard /data/media /mnt/shell/emulated 1023 1023
